
\-- release 2.6.1

  * Fixed all GitHub CodeQL alerts and security issues.

  * Fixed all GitHub Codacy Security Scan reported issues.

  * Enhanced security: Replaced `secpr5121` with `secp256r1` for default `ECGenParameterSpec`.

  * Enhanced security: Use of a cryptographic algorithm with insufficient key size - Threw `InvalidAlgorithmParameterException` when using a cryptographic algorithm with insufficient key size to call `EncryptorUtil.generateKeyPair()`.

  * Enhanced security: Fixed polynomial regular expression used on uncontrolled data (`FormatterUtil`).

  * Enhanced error handling: `PathParm` with regex inside URL will return `400 Bad Request` when regex does not match.

  * Enhanced logging: Logged detailed information and stack trace for health check failure.

  * Enhanced logging: Netty channel handler exception will be logged only when:

    1.  run with `-debug`
    2.  or caller address is in enabled whitelist or not in enabled blacklist

  * Config change: `Regex.Prefix` is removed in `CallerAddressFilter`, the whitelist and blacklist no longer need a prefix to mark a value as regex.

    1.  `cfg_nio.properties`
          * removed: `CallerAddressFilter.Regex.Prefix`
          * default value changed: `CallerAddressFilter.option=String` (was `"HostName"`)
    2.  `cfg_grpc.properties`
          * removed: `gRpc.server.CallerAddressFilter.Regex.Prefix`
          * default value changed: `gRpc.server.CallerAddressFilter.option=String` (was `"HostName"`)

  * **Maven Central Repository:**
    `https://repo.maven.apache.org/maven2/org/summerboot/jexpress/2.6.1/`
    `https://central.sonatype.com/artifact/org.summerboot/jexpress/2.6.1`

  * **mvnrepository.com:**
    `https://mvnrepository.com/artifact/org.summerboot/jexpress/2.6.1`

\-- release 2.6.0

  * **Enhanced security 1:** This change uses enhanced encryption/decryption to protect sensitive data, like passwords in config files.
    The 2.5.2 cannot read the current encrypted data by 2.5.1.